2006-01-17 Paul Jakma <paul.jakma@sun.com>

	* kernel_socket.c: (ifam_read) Read metric from RTM_NEWADDR.
	  If interface is an alias, pass the alias as a label for
	  connected_add_ipv{4,6}.
	* rt_netlink.c: (netlink_interface_addr) print out
	  IFA_CACHEINFO info, if present, when debugging kernel
	  messages.

2006-01-17 Gunnar Stigen <gunnar.stigen@axxessit.no>

	* connected.c: (connected_up_ipv{4,6}) Include interface metric on
	  connected routes.
	* if_ioctl.c: (if_getaddrs) Be defensive about assuming
	  that struct ifaddrs will have ifa_addr filled in.

2006-01-16 Paul Jakma <paul.jakma@sun.com>

	* zserv.c: Read/write updated Zserv header.

2006-01-11 Paul Jakma <paul.jakma@sun.com>

	* zserv.c: (zsend_interface_{add,delete,update}) if flags are
	  8 bytes now, update to write out with stream_putq.

2005-12-29  Greg Troxel  <gdt@fnord.ir.bbn.com>

	* kernel_socket.c: remove dead code (from David Young).

	* rt_socket.c (kernel_rtm_ipv4): Use AF_INET rather than AF_UNSPEC
	for mask.  From David Young.

2005-11-26 Paul Jakma <paul.jakma@sun.com>

	* connected.{c,h}: (connected_add_ipv6) label should have
	  const qualifier, fix declarations.

2005-11-24 Paul Jakma <paul.jakma@sun.com>

	* kernel_socket.h: New header for functions exported to sysctl
	  methods.
	* kernel_socket.c: include previous.
	  Remove static qualifier from couple of functions which are
	  used by sysctl methods.
	  Add a workaround for a bogus gcc warning to the RTA_ macros.
	* Makefile.am: Add kernel_socket.h to noinst_HEADERS
	* if_sysctl.c: include rt.h and kernel_socket.h and remove
	  redundant prototypes.
	* rtread_sysctl.c: ditto.
	  (route_read) fix mismatch of return values.
	* {rt,zserv,rib}.h: Include lib headers depended on.

2005-11-23 Paul Jakma <paul.jakma@sun.com>

	* (general) fix some small compile errors, and mark several
          functions as static.
        * kernel_socket.c: (ifan_read) should be static.
          fix missing brackets.